tooling/nargo_cli/tests/snapshots/execution_success/array_dynamic/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [u32; 5], v1: u32, v3: u32, v4: [u32; 5], v5: [u32; 5], v6: u32, v7: Field):
    v2 = allocate -> &mut u32
    store v1 at v2
    (no terminator instruction)
}
